# pipeshub-ai

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONNECTOR_INTEGRATION_PLAYBOOK.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.base  Dockerfile.cloud  Dockerfile.integration  Makefile  README.md  README_TESTING.md  TEST_EVIDENCE.md  TEST_PLAN.md  check.md  cspell.json  generate_token.py  install.sh  package.json  pytest.ini  requirements-test.txt  ruff.toml  run_tests.py
.gemini/: config.yaml  (+1 more)
backend/python/: .coveragerc  .env.template  .gitignore  Dockerfile  GONG_INTEGRATION_README.md  env.example  env.template  pyproject.toml  requirements.txt  test_gong_compilation.py  test_gong_integration.py  test_gong_structure.py
backend/python/app/: connectors_main.py  docling_main.py  embedding_main.py  indexing_main.py  parsing_main.py  query_main.py
backend/python/app/agent_loop_lib/: __main__.py  builder.py  cli.py
backend/python/app/agent_loop_lib/agent/: __init__.py  best_of_n.py  feasibility.py  goal.py  hook_dispatch.py  intent.py  loops.py  observability.py  phase_driver.py  prompt.py  resume.py  single_shot_runner.py  spawn_scheduler.py  spec.py  streaming.py  tool_loop.py
backend/python/app/agent_loop_lib/commands/: base.py  loader.py  registry.py
backend/python/app/agent_loop_lib/context/: base.py  graph.py  graph_builder.py  manager.py  window.py
backend/python/app/agent_loop_lib/control_plane/: config.py  control_plane.py
backend/python/app/agent_loop_lib/core/: context.py  exceptions.py  interfaces.py  messages.py  registry.py  responses.py  scope.py  streaming.py  structured_output.py  text_scoring.py  tokens.py  tool_schema.py  types.py
backend/python/app/agent_loop_lib/eval/: decision_trace.py  feedback.py  rubric.py  trajectory.py
backend/python/app/agent_loop_lib/events/: base.py
backend/python/app/agent_loop_lib/hooks/: events.py  registry.py
backend/python/app/assets/: test_image.b64
backend/python/app/builders/: records_builder.py
backend/python/app/config/: collection_spec.py  configuration_service.py  errors.py  key_value_store.py  key_value_store_factory.py
backend/python/app/containers/: connector.py  container.py  docling.py  indexing.py  query.py
backend/python/app/core/: celery_app.py  embedding_service.py  llm_service.py  redis_scheduler.py  signed_url.py
backend/python/app/docs/: __init__.py  openapi.yaml  swagger.py  swagger.yaml  swagger_config.py
backend/python/app/events/: block_prompts.py  events.py  processor.py
backend/python/app/exceptions/: embedding_exceptions.py  indexing_exceptions.py
backend/python/app/health/: health.py
backend/python/app/migrations/: connector_migration_service.py  delete_old_agents_templates_migration.py  drive_to_drive_workspace_migration.py  files_to_records_migration.py  folder_hierarchy_migration.py  knowledgebase_to_connector_migration.py  oauth_credentials_migration.py  permission_edge_migration.py  record_group_app_edge_migration.py  toolset_instance_migration.py
backend/python/app/models/: _model_rebuild.py  blocks.py  blocks_temp.py  entities.py  file.py  graph.py  permission.py  records.py  users.py
backend/python/app/sandbox/: __init__.py  artifact_cleanup.py  artifact_upload.py  base_executor.py  docker_executor.py  local_executor.py  manager.py  models.py  package_policy.py  redact.py
backend/python/app/schema/: node_schema_registry.py  node_validator.py
backend/python/app/scripts/: kv_store_inspect.py
backend/python/app/services/: ai_config_handler.py  base_client.py  kafka_consumer.py
backend/python/app/setups/: connector_setup.py  indexing_setup.py  query_setup.py
backend/python/app/telemetry/: __init__.py  pusher.py  setup.py
backend/python/app/utils/: agent_fetch_full_record.py  aimodels.py  api_call.py  attachment_utils.py  cache_helpers.py  chat_attachment_loader.py  chat_helpers.py  citations.py  conversation_tasks.py  cursor.py  custom_chat_model.py  custom_embeddings.py  datetime_utils.py  embedding_server_client.py  execute_query.py  fetch_full_record.py  fetch_slack_thread.py  fetch_url_tool.py  filename_utils.py  html_to_blocks.py  image_utils.py  indexing_helpers.py  indexing_progress.py  jwt.py  jwt_config.py  llm.py  llm_cost.py  logger.py  lookup_record.py  memory_debug.py  mimetype_to_extension.py  navigate_tool.py  oauth_config.py  query_decompose.py  query_transform.py  record_tool_helpers.py  recoverable_process_pool.py  redis_util.py  request_context.py  sse_contract.py  (+7 more)
backend/python/code-generator/: aha.py  airtable.py  asana.py  azure_blob.py  bitbucket.py  bookstack.py  box.py  clickup.py  coda.py  datadog.py  docusign.py  dokuwiki.py  dropbox.py  dropbox_.py  evernote.py  figma.py  freshdesk.py  freshservice.py  gcs.py  github.py  gong.py  google.py  google_cloud.py  hubspot.py  linear.py  linkedin.py  monday.py  notion.py  one_drive.py  outlook.py  pagerduty.py  posthog.py  s3.py  slack.py  trello.py  utils.py  workday.py  zammad.py  zendesk.py  zoom.py
backend/python/code-generator/amazon_sqs/: sqs.py
backend/python/code-generator/asana/: asana.py
backend/python/code-generator/azure_blob/: azure_blob.py
backend/python/code-generator/bitbucket/: bitbucket.py
backend/python/code-generator/clickhouse/: clickhouse.py
backend/python/code-generator/hubspot/: hubspot_data_source.py
backend/python/code-generator/microsoft/: ms_one_drive.py  ms_one_note.py  ms_outlook_calendar_contacts.py  ms_planner.py  ms_sharepoint.py  ms_teams.py  ms_users_groups.py
backend/python/code-generator/salesforce/: crm.py
backend/python/code-generator/servicenow/: servicenow.py
backend/python/code-generator/workday/: workday.py
backend/python/scripts/: evict_orphan_qdrant.py
backend/python/tests/: README.md  conftest.py
backend/python/tests/unit/: test_connectors_main.py  test_docling_main.py  test_embedding_main.py  test_indexing_main.py  test_query_main.py  test_streaming.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
(+4428 files in other folders)
