[package]
name = "pipeshub-desktop"
version = "0.1.0"
description = "PipesHub Desktop App"
authors = ["PipesHub"]
license = "AGPL-2.0"
edition = "2021"

[lib]
name = "pipeshub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
